@@ -1,6 +1,8 @@
 HEAD
 	+ Improve the output of ebox module status, to be consistent with the one
 	  shown in the interface
+	+ Add options to the report generation to allow queries to be more
+	  flexible
 	+ Events: Add possibility to enable watchers by default
 	+ Bugfix: Adding a new field to a model now uses default
 	  value instead of an empty value
